#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

#--- Versions are set here

AC_INIT(phool, 1.0, bugs@tekwire.net)

PACKAGE_DNAME='phool'	# Name to display
AC_SUBST(PACKAGE_DNAME)

PACKAGE_AUTHOR='Francois Laupretre <mailto:francois@tekwire.net>'
AC_SUBST(PACKAGE_AUTHOR)

PACKAGE_COPYRIGHT="Copyright $PACKAGE_AUTHOR"
AC_SUBST(PACKAGE_COPYRIGHT)

PACKAGE_URL="http://$PACKAGE_NAME.tekwire.net"
AC_SUBST(PACKAGE_URL)

RELEASE_NUMBER="1"
AC_SUBST(RELEASE_NUMBER)

PACKAGE_LICENSE="GNU Lesser General Public License (LGPL) <http://www.gnu.org/licenses/>"
AC_SUBST(PACKAGE_LICENSE)

PACKAGE_SUMMARY='The PHP Object-Oriented Library'
AC_SUBST(PACKAGE_SUMMARY)

#------------------------

AC_CONFIG_SRCDIR([src/PHO_XPage.php])
AC_CONFIG_AUX_DIR(build)

AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE
AM_AUX_DIR_EXPAND
AM_PROG_INSTALL_SH

AC_PROG_INSTALL

#----------------------------------------------------------------------
# Checks for PHP

sinclude(build/find_php.m4)

#----------------------------------------------------------------------
# Checks for an external PHK_Creator package

sinclude(build/find_phkcreator.m4)

PHK_CREATE="$PHP $PHK_CREATOR build"
AC_SUBST(PHK_CREATE)

#----------------------------------------------------------------------
# Checks for phpdoc (Optional)

sinclude(build/find_phpdoc.m4)

#----------------------------------------------------------------------
# Checks for phpxref (Optional)

sinclude(build/find_phpxref.m4)

#----------------------------------------------------------------------
# Configure options specific to this software

sinclude(build/specific.m4)

#----------------------------------------------------------------------
# Packaging stuff

RPM_RUNTIME_DEPS=''
AC_SUBST(RPM_RUNTIME_DEPS)

RPM_BUILD_DEPS='php-cli'
AC_SUBST(RPM_BUILD_DEPS)

DEB_RUNTIME_DEPS=""
AC_SUBST(DEB_RUNTIME_DEPS)

DEB_BUILD_DEPS='php5-cli'
AC_SUBST(DEB_BUILD_DEPS)

DEB_SECTION='system'
AC_SUBST(DEB_SECTION)

DEB_ARCHITECTURE='any'
AC_SUBST(DEB_ARCHITECTURE)

PACKAGING_OS=`uname -s`
AC_SUBST(PACKAGING_OS)

RPM_BUILD_OPTS=''
AC_SUBST(RPMBUILD_OPTS)

ARCHITECTURE='noarch'
AC_SUBST(ARCHITECTURE)

#----------------------------------------------------------------------

AC_CONFIG_FILES([Makefile
				phool.psf
				build/phool.spec
				build/phool.dsc
				build/debian.changelog
				build/debian.control
				doc/Makefile
				doc/xref.cfg
				doc/api.psf
				doc/xref.psf])

AC_OUTPUT
